feat: implement reduced motion support and enhance animation timing
- Add ReducedMotionProvider to manage user preferences for reduced motion
- Introduce useAnimationTiming hook to provide animation timings based on device type
- Update PageTransition component to respect reduced motion settings
- Refactor animation easing and timing constants for better usability

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ next-env.d.ts
 /docs
 /public/images/design
 /src/components/theme-switcher.tsx
+/src/components/providers/animated-title-provider.tsx
+/src/hooks/use-animated-title.ts
