--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "clsx": "^2.1.1",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
     "motion": "^12.27.1",
     "next": "16.1.1",
