--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
+    "validate-markdown": "tsx scripts/validate-markdown.ts",
     "prepare": "husky",
     "release": "commit-and-tag-version -a",
     "release:minor": "commit-and-tag-version --release-as minor -a",
@@ -58,6 +59,7 @@
     "prettier": "^3.8.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   },
   "pnpm": {
