--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@hookform/resolvers": "^5.2.2",
+    "@react-email/render": "^2.0.4",
+    "@t3-oss/env-nextjs": "^0.13.10",
+    "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
     "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
@@ -37,16 +41,20 @@
     "next-intl": "^4.7.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
     "remark-html": "^16.0.1",
+    "resend": "^6.9.1",
     "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.6",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "@tailwindcss/postcss": "^4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
