--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sayago.dev",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,6 +13,7 @@
     "validate-markdown": "tsx scripts/validate-markdown.ts",
     "prepare": "husky",
     "release": "commit-and-tag-version -a",
+    "release:patch": "commit-and-tag-version --release-as patch -a",
     "release:minor": "commit-and-tag-version --release-as minor -a",
     "release:major": "commit-and-tag-version --release-as major -a",
     "release:first": "commit-and-tag-version --first-release -a",
